# PIRATES

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.old  README.md  groupes.txt
asset/maps/: collision.tmx  default.tmx  map.tmx.save
doc/: CMakeLists.txt  doxyfile
header/client/: CClient.h  CClientCharacter.h  CClientOtherCharacter.h  CClientPirate.h  CController.h  CDrawableEntity.h  CMap.h  CPirate.h  CRender.h  CRenderPlayer.h  CRenderWindow.h  CTileMap.h
header/common/: CAction.h  CAlive.h  CInteractionArea.h  CItem.h  CMapObject.h  CMapQuery.h  CNetworkMessage.h  CObject.h  CPlayer.h  CPositionable.h  CQuery.h  CResourceHandler.h  CTools.h  CTreasure.h  CWeapon.h  CWorldMap.h  EInteractionAreaType.h  ENetworkMessageType.h  ETreasuretype.h  SFML.h  TMX.h
header/server/: Box2D.h  CServer.h  CTeam.h  CWorld.h  CWorldBox.h  SFML.h
header/worldBox/: CWorldBox.h
lib/: CMakeLists.txt  libBox2D.so.2.3.0
lib/client/: CClient.cpp  CController.cpp  CMakeLists.txt  CMap.cpp  CPirate.cpp  CRender.cpp  CRenderPlayer.cpp  CRenderWindow.cpp  CTileMap.cpp
lib/common/: CMakeLists.txt  CMapQuery.cpp  CPlayer.cpp  CQuery.cpp  CWorldMap.cpp
lib/server/: CMakeLists.txt  CServer.cpp  CWorldBox.cpp
lib/worldBox/: CMakeLists.txt  CWorldBox.cpp
pkg-config/: boost.pc  box2d.pc  libtmx.pc  thor.pc
src/client/: CClient.cpp  CClient.h  CMap.cpp  CMap.h  CPirate.cpp  CPirate.h  Makefile  Makefile~  client.cpp  header.h
src/common/: CPlayer.cpp  CWorldMap.cpp
src/server/: CServer.cpp  CServer.h  CWorld.cpp  CWorldBox.cpp  Makefile  header.h  server.cpp
